# javaengine

./: .gitmodules  README.md
backend/: CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh  setup.bat  setup.sh  test.bat  test.sh
backend/javanative/: JEBase.h  JEBase.java  Test.java
backend/javanative/test/: Hello.java
backend/src/: JEBase.cpp  lib.cpp
backend/src/include/libtest/: JEBase.h  JEBase.java  lib.h
backend/tests/: CMakeLists.txt
backend/tests/test0/: CMakeLists.txt
backend/tests/test0/src/: main.cpp
javaengine/: build.gradle
javaengine/src/main/java/ecs/: ECS.java
javaengine/src/main/java/org/app/: Main.java
javaengine/src/main/java/org/app/hexagonal/: Adapter.java  IPort.java  Port.java
javaengine/src/main/java/org/app/hexagonal/test/: HelloWorldPort.java  IHelloWorld.java
javaengine/src/main/java/org/example/: Main.java
